data/all_generated_tests/raw_wast_tests/loop_StackCorruption_345.wast
;; 6. **Stack Height Variability within and after Loop Execution**    - Define a loop where each iteration has a differing number of elements pushed/populated in the stack using various operations. Monitor stack integrity and handle potential overflows or underflows post loop branching.

(assert_invalid
  (module (func $stack-height-variability
    (loop (result i32)
      (i32.const 1) 
      (br 0)
    )
    ;; More code to test stack height variability could be added here
  ))
  "type mismatch"
)